# 3dconv

./: LICENSE  README.md  meson.build
.github/workflows/: main.yml
doc/: Doxyfile.in  meson.build  plugins.md
include/3dconv/: cli.hpp  io.hpp  linalg.hpp  model.hpp  utils.hpp
plugins/: README.md
plugins/parsers/: obj.cpp
plugins/writers/: stl_bin.cpp
src/: bitset.cpp  cli.cpp  main.cpp  model.cpp
src/model/: face.cpp  model.cpp
test/: bitset_test.cpp  cli_test.cpp  linalg_test.cpp  meson.build  model_test.cpp  obj2stlbin_test.cpp  obj_parser_test.cpp  test_tools.hpp
test/test_files/obj2stlbin_test/: expected.stl
